--- a/african_conflicts.ipynb
+++ b/african_conflicts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e19a499d",
    "metadata": {
     "scrolled": false
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "82d75e13",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.git', '.gitattributes', '.ipynb_checkpoints', 'african_conflicts.csv', 'african_conflicts.ipynb', 'Analysis_app.py', 'data.pkl', 'LICENSE', 'README.md', 'Requirements.txt']\n"
+      "['.git', '.gitattributes', '.ipynb_checkpoints', 'african_conflicts.csv', 'african_conflicts.ipynb', 'Analysis_app.py', 'data.pkl', 'LICENSE', 'README.md', 'requirements.txt']\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "eef14e12",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f0f43aa5",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2b2eee29",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "(165808, 28)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cb6347b0",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "10527077",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ae8c5f06",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "3470314f",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "4b7ad4b4",
    "metadata": {
     "scrolled": true
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "fd00943a",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c154a8fa",
    "metadata": {},
    "outputs": [],
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "f1592775",
    "metadata": {
     "scrolled": true
@@ -863,7 +863,7 @@
        "4  2001  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "020e31a7",
    "metadata": {
     "scrolled": true
@@ -1063,7 +1063,7 @@
        "165807                            The Herald (Harare)  2012  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "16212a55",
    "metadata": {
     "scrolled": true
@@ -1102,7 +1102,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "cc864696",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "Name: EVENT_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "e5a09baa",
    "metadata": {
     "scrolled": true
@@ -1254,7 +1254,7 @@
        "max     25000.000000       3.000000     651.000000    2017.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "8f654cdf",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1291,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "00d96cf0",
    "metadata": {},
    "outputs": [],
